# agentic-notion-based-task-manager-

./: .gitignore  db.sqlite  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 6f121c300ac9_initial_migration.py
src/: config.py  models.py
src/agents/parsers/: task_produce_workflow_parsers.py
src/agents/prompts/: task_producer_workflow_prompts.py
src/agents/schemas/dtos/: task_producer_dto.py
src/core/: db.py
src/core/repositories/: base.py
src/core/services/: base.py
src/integrations/notion/: core.py
src/integrations/notion/services/: notion_blocks_service.py  notion_data_source_service.py
src/projects/: dependencies.py
src/projects/repositories/: projects_repository.py
src/projects/services/: projects_service.py
src/workflows/: task_producer_workflow.py
